# sqlite3_examples

./: .gitignore  CMakeLists.txt  datos.db
src/: main.cpp  v2.cpp
src/ABMC/: clase.cpp  ejemplo.cpp  guarderia.cpp  video.cpp
src/introduccion/: intro.cpp
src/queries_complejos/: queries_stmt.cpp
src/queries_sensillos/: queries_sensillo.cpp
